--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.9.3",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -19,6 +21,7 @@
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
